Fix minor alignment issues

--- a/src/home/components/Skill/styles.module.scss
+++ b/src/home/components/Skill/styles.module.scss
@@ -8,17 +8,18 @@
   align-items: center;
   margin: 0 7.5px 50px 7.5px;
   text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  color: rgba(186, 186, 186, 1);
 
   span {
     display: inline-block;
     width: 100%;
-    font-weight: 400;
-    font-size: 12px;
-    color: rgba(186, 186, 186, 1);
   }
 
   .logoSkill {
     height: 50px;
+    width: auto;
     margin-bottom: 10px;
   }
 
